	- Further fix to bombs ignoring max missiles/tge.
- Competition:
	- Calculate the proper separation between teams for starting a competition - fixes the competitions not starting bug.
	- Set the number of teams to 0 in one-at-a-time waypoint mode tournaments so spawning works correctly.
	- Ignore modular missile engines when activating all engines during spawning.
- Weapons:
	- Add pro-nav gain parameter as tunable parameter for missile parts (pronavGain), set pro-nav gain to 3 by default.
	- Anti-rad missiles now continue to target the last known GPS point instead of disabling guidance.
	- Fix ShapedCharge warheads doing no damage.
	- Activate modular missile engines directly instead of using staging (which sometimes doesn't work).
	- Apply Floating Origin/Krakensbane corrections to missile guidances - fixes missiles detonating partway to target due to miss checks.
- Armor:
	- Fix ProcArmor max scalar clamp not appearing.
	- Add Yield and YoungModulus fields to armour for reflection - fixes armour definitions without these properties not loading properly.
	- Tweak penetration calcs for ultra-low ductility armor materials.
- UI:
	- Missile names now linked to launching craft teamcolor.
	- Set the AI GUI window rect in Start, not Awake, to guarantee that BDArmorySettings values have been read - fixes the 0-height AI GUI window.

v1.5.0.0
FIXES
- Fix 'resizeSquare' texture not being loaded sometimes (due to a race condition?).
- Clean up log spam from ExplosionFX.
- Fix Ammo Selection Tool GUI when selecting a weapon using legacy ammo definitions.
- Fix ATG missiles not respecting maxMissilesPerTarget.
- Fixes Procwing HP and Armor calcs when using FAR.
- Fix ProcParts not updating HP/Armor volume.
- Adds missing FFAR rocket ammo to universal ammo boxes.
- Fixes TOW missile FX.
- Fixes Proc Armor bugs.
- Fixes broken hydraulics on Chaingun, Hydra Turret and Patriot Launcher models.
- Fixes custom armor volumes in .cfgs being ignored.